DT-3059: Add auditing for DAA creation and removal (#2848)
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>