@@ -2,8 +2,11 @@ package org.broadinstitute.consent.http.service.dao;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.sql.Timestamp;
 import java.time.Instant;
@@ -11,16 +14,16 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import org.apache.commons.lang3.RandomStringUtils;
-import org.apache.commons.lang3.RandomUtils;
 import org.broadinstitute.consent.http.db.DAOTestHelper;
+import org.broadinstitute.consent.http.enumeration.AuditActions;
 import org.broadinstitute.consent.http.enumeration.UserRoles;
+import org.broadinstitute.consent.http.models.DaaAudit;
 import org.broadinstitute.consent.http.models.Dac;
 import org.broadinstitute.consent.http.models.DataAccessAgreement;
 import org.broadinstitute.consent.http.models.DataUseBuilder;
 import org.broadinstitute.consent.http.models.Dataset;
+import org.broadinstitute.consent.http.models.LibraryCard;
 import org.broadinstitute.consent.http.models.User;
 import org.broadinstitute.consent.http.rules.DACAutomationRule;
 import org.broadinstitute.consent.http.rules.RuleState;
@@ -54,13 +57,13 @@ class DacServiceDAOTest extends DAOTestHelper {
     List<Dac> dacs = createMockDACs();
     List<Integer> createdDatasetIds = new ArrayList<>();
     dacs.forEach(
-        dac -> {
+        ignored -> {
           // DAC
           int dacId =
               dacDAO.createDac(
-                  "dac name: " + RandomStringUtils.randomAlphabetic(10),
-                  "dac description: " + RandomStringUtils.randomAlphabetic(10),
-                  "dac email: " + RandomStringUtils.randomAlphabetic(10),
+                  "dac name: " + randomAlphabetic(10),
+                  "dac description: " + randomAlphabetic(10),
+                  "dac email: " + randomAlphabetic(10),
                   new Date());
           // Data Access Agreement
           int daaId =
@@ -71,28 +74,28 @@ class DacServiceDAOTest extends DAOTestHelper {
                   new Date().toInstant(),
                   dacId);
           // DAC->DAA Association.
-          daaDAO.createDacDaaRelation(dacId, daaId);
+          daaDAO.createDacDaaRelation(dacId, daaId, superUser.getUserId());
           // Library Card User
           User lcUser = createUser();
           // A user's library card needs an institution
-          int dunsNumber = RandomUtils.nextInt(10, 100);
+          int dunsNumber = randomInt(10, 100);
           institutionDAO.insertInstitution(
-              "institution name: " + RandomStringUtils.randomAlphabetic(10),
-              "it director name: " + RandomStringUtils.randomAlphabetic(10),
-              "it director email: " + RandomStringUtils.randomAlphabetic(10),
-              "institution url: " + RandomStringUtils.randomAlphabetic(10),
+              "institution name: " + randomAlphabetic(10),
+              "it director name: " + randomAlphabetic(10),
+              "it director email: " + randomAlphabetic(10),
+              "institution url: " + randomAlphabetic(10),
               dunsNumber,
-              "org chart url: " + RandomStringUtils.randomAlphabetic(10),
-              "verification url: " + RandomStringUtils.randomAlphabetic(10),
-              "verification file name: " + RandomStringUtils.randomAlphabetic(10),
-              "org type: " + RandomStringUtils.randomAlphabetic(10),
+              "org chart url: " + randomAlphabetic(10),
+              "verification url: " + randomAlphabetic(10),
+              "verification file name: " + randomAlphabetic(10),
+              "org type: " + randomAlphabetic(10),
               superUser.getUserId(),
               new Date());
           int userLcId =
               libraryCardDAO.insertLibraryCard(
                   lcUser.getUserId(),
-                  "library card user name: " + RandomStringUtils.randomAlphabetic(10),
-                  "library card user email: " + RandomStringUtils.randomAlphabetic(10),
+                  "library card user name: " + randomAlphabetic(10),
+                  "library card user email: " + randomAlphabetic(10),
                   superUser.getUserId(),
                   new Date());
           // Library Card User to Data Access Agreement association
@@ -107,10 +110,10 @@ class DacServiceDAOTest extends DAOTestHelper {
           // DAC.
           int datasetId =
               datasetDAO.insertDataset(
-                  "dataset name: " + RandomStringUtils.randomAlphabetic(10),
+                  "dataset name: " + randomAlphabetic(10),
                   Timestamp.from(Instant.now()),
                   superUser.getUserId(),
-                  "object id: " + RandomStringUtils.randomAlphabetic(10),
+                  "object id: " + randomAlphabetic(10),
                   new DataUseBuilder().setGeneralUse(true).build().toString(),
                   dacId);
           createdDatasetIds.add(datasetId);
@@ -128,7 +131,8 @@ class DacServiceDAOTest extends DAOTestHelper {
         .forEach(
             dac -> {
               assertDoesNotThrow(
-                  () -> serviceDAO.deleteDacAndDaas(superUser, dac), "Delete should not fail");
+                  () -> serviceDAO.deleteDacAndRemoveDaaAssociation(superUser, dac),
+                  "Delete should not fail");
               List<DACAutomationRule> rules =
                   dacAutomationRuleDAO.findAllDACAutomationRulesByDACId(dac.getDacId()).stream()
                       .filter(r -> r.enabledByUserId() != null)
@@ -139,36 +143,20 @@ class DacServiceDAOTest extends DAOTestHelper {
               assertTrue(datasets.isEmpty());
               List<User> members = dacDAO.findMembersByDacId(dac.getDacId());
               assertTrue(members.isEmpty());
+              // DAA deletion is not allowed even when deleting a DAC
               DataAccessAgreement daa = daaDAO.findByDacId(dac.getDacId());
-              assertNull(daa);
-              // Assert that there are no DAAs that reference this DAC
-              daaDAO
-                  .findAll()
-                  .forEach(
-                      d -> {
-                        List<Integer> daaDacIds = d.getDacs().stream().map(Dac::getDacId).toList();
-                        assertFalse(
-                            daaDacIds.contains(dac.getDacId()),
-                            "There should be no DAAs that have DACs matching this deleted Dac ID");
-                      });
-              // Assert that there are no Library Cards with DAAs that reference this DAC
-              libraryCardDAO
-                  .findAllLibraryCards()
-                  .forEach(
-                      lc -> {
-                        List<Integer> daaIds = lc.getDaaIds();
-                        if (!daaIds.isEmpty()) {
-                          daaIds.forEach(
-                              daaId -> {
-                                DataAccessAgreement innerDaa = daaDAO.findById(daaId);
-                                List<Integer> innerDacIds =
-                                    innerDaa.getDacs().stream().map(Dac::getDacId).toList();
-                                assertFalse(
-                                    innerDacIds.contains(dac.getDacId()),
-                                    "There should be no Library Cards with DAAs that have DACs matching this deleted Dac ID");
-                              });
-                        }
-                      });
+              assertNotNull(daa);
+              // Assert that there are DAA audit records for this dac deletion
+              List<DaaAudit> daaAudits = daaDAO.findAuditsByDaaId(daa.getDaaId());
+              assertFalse(daaAudits.isEmpty());
+              assertTrue(daaAudits.stream().anyMatch(a -> a.action().equals(AuditActions.REMOVE)));
+              // Assert that created library cards are not deleted and that their association to the
+              // DAA is not removed
+              List<LibraryCard> libraryCards =
+                  libraryCardDAO.findAllLibraryCards().stream()
+                      .filter(lc -> lc.getDaaIds().contains(daa.getDaaId()))
+                      .toList();
+              assertFalse(libraryCards.isEmpty());
             });
     createdDatasetIds.forEach(
         id -> {
@@ -176,6 +164,34 @@ class DacServiceDAOTest extends DAOTestHelper {
           assertNull(ds.getDacId(), "Dataset should not have a DAC");
           assertNull(ds.getDacApproval(), "Dataset should not have a DAC approval");
         });
+  }
+
+  @Test
+  void testDeleteDac_nullDAC() {
+    User superUser = createUser();
+    assertThrows(
+        IllegalArgumentException.class,
+        () -> serviceDAO.deleteDacAndRemoveDaaAssociation(superUser, null),
+        "Should throw IllegalArgumentException when DAC is null");
+  }
+
+  @Test
+  void testDeleteDac_nullDAA() {
+    User superUser = createUser();
+    int dacId =
+        dacDAO.createDac(
+            "dac name: " + randomAlphabetic(10),
+            "dac description: " + randomAlphabetic(10),
+            "dac email: " + randomAlphabetic(10),
+            new Date());
+    Dac dac = dacDAO.findById(dacId);
+    try {
+      serviceDAO.deleteDacAndRemoveDaaAssociation(superUser, dac);
+      List<DaaAudit> daaAudits = daaDAO.findAllDaaAudits();
+      assertTrue(daaAudits.isEmpty(), "There should be no DaaAudits in a DAC delete operation");
+    } catch (Exception e) {
+      fail(e.getMessage());
+    }
   }
 
   /**
@@ -194,6 +210,6 @@ class DacServiceDAOTest extends DAOTestHelper {
               dac.setAssociatedDaa(daa);
               return dac;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 }
